--- a/ITIResturant/ITIResturant/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/ITIResturant/ITIResturant/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,2 +1,14 @@
-﻿<h2>Password Reset Successful</h2>
-<p>Your password has been reset successfully. You can now <a asp-action="Login" asp-controller="Account">login</a>.</p>
+﻿@{
+    ViewData["Title"] = "Password Reset Successful";
+}
+
+<div class="container mt-5 text-center">
+    <h2 class="text-success">✅ Password Reset Successful</h2>
+    <p>
+        Your password has been reset successfully. <br />
+        You can now log in to your account.
+    </p>
+    <a asp-controller="Account" asp-action="Login" class="btn btn-primary">
+        Go to Login
+    </a>
+</div>
