--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Events.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Events.cshtml
@@ -145,7 +145,7 @@
                             <div class="row g-4">
                                 <div class="col-md-6 col-lg-3">
                                     <div class="event-img position-relative">
-                                        <img class="img-fluid rounded w-100" src="~/~/img/event-3.jpg" alt="">
+                                        <img class="img-fluid rounded w-100" src="~/img/event-3.jpg" alt="">
                                         <div class="event-overlay d-flex flex-column p-4">
                                             <h4 class="me-auto">Corporate</h4>
                                             <a href="img/01.jpg" data-lightbox="event-10" class="my-auto"><i class="fas fa-search-plus text-dark fa-2x"></i></a>
