--- a/ITIResturant/ITIResturant/Views/Shared/_Header.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/_Header.cshtml
@@ -19,6 +19,7 @@
                         <a asp-controller="Home" asp-action="Service" class="nav-item nav-link">Services</a>
                         <a asp-controller="Home" asp-action="Events" class="nav-item nav-link">Events</a>
                         <a asp-controller="Home" asp-action="Menu" class="nav-item nav-link">Menu</a>
+                        <a asp-controller="Review" asp-action="Index" class="nav-item nav-link">Feedback</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu bg-light">
