--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Testimonial.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Testimonial.cshtml
@@ -1,188 +1,47 @@
-﻿<div class="container-fluid py-6">
-    <div class="container">
-        <div class="text-center wow bounceInUp" data-wow-delay="0.1s">
-            <small class="d-inline-block fw-bold text-dark text-uppercase bg-light border border-primary rounded-pill px-4 py-1 mb-3">Testimonial</small>
-            <h1 class="display-5 mb-5">What Our Customers says!</h1>
-        </div>
-        <div class="owl-carousel owl-theme testimonial-carousel testimonial-carousel-1 mb-4 wow bounceInUp" data-wow-delay="0.1s">
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
+﻿@using Restaurant.BLL.ModelVM.HomeIndexVm
+@model HomeIndexVm
+
+
+<<h2 class="mt-4 text-center">What Our Customers Say</h2>
+
+@if (Model.Reviews.Any())
+{
+    <div class="row mt-4">
+        @foreach (var review in Model.Reviews.Take(6))
+        {
+            <div class="col-md-4 mb-4">
+                <div class="card shadow-sm border-0 h-100">
+                    <div class="card-body">
+                        <h5 class="card-title">@review.UserName</h5>
+                        <p class="text-warning mb-2">
+                            @{
+                                
+                                var rating = review.Rating;
+                            }
+                            @for (int i = 1; i <= 5; i++)
+                            {
+                                
+                                if (i <= review.Rating)
+                                {
+                                    <i class="bi bi-star-fill"></i>
+                                }
+                                else
+                                {
+                                    <i class="bi bi-star"></i>
+                                }
+                            }
+                        </p>
+                        <p class="card-text">"@review.Comment"</p>
                     </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
+                    <div class="card-footer text-muted small">
+                        @review.CreatedAt.ToString("MMM dd, yyyy")
                     </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
                 </div>
             </div>
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
-                    </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
-                    </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-4.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
-                    </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-        </div>
-        <div class="owl-carousel testimonial-carousel testimonial-carousel-2 wow bounceInUp" data-wow-delay="0.3s">
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-1.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
-                    </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-2.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
-                    </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-3.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
-                    </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-            <div class="testimonial-item rounded bg-light">
-                <div class="d-flex mb-3">
-                    <img src="img/testimonial-4.jpg" class="img-fluid rounded-circle flex-shrink-0" alt="">
-                    <div class="position-absolute" style="top: 15px; right: 20px;">
-                        <i class="fa fa-quote-right fa-2x"></i>
-                    </div>
-                    <div class="ps-3 my-auto">
-                        <h4 class="mb-0">Person Name</h4>
-                        <p class="m-0">Profession</p>
-                    </div>
-                </div>
-                <div class="testimonial-content">
-                    <div class="d-flex">
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                        <i class="fas fa-star text-primary"></i>
-                    </div>
-                    <p class="fs-5 m-0 pt-3">Lorem ipsum dolor sit amet elit, sed do eiusmod tempor ut labore et dolore magna aliqua.</p>
-                </div>
-            </div>
-        </div>
+        }
     </div>
-</div>
+}
+else
+{
+    <p class="text-center text-muted mt-3">No reviews yet. Be the first to leave feedback!</p>
+}
