--- a/ITIResturant/ITIResturant/Views/Shared/_IndexLayout.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/_IndexLayout.cshtml
@@ -39,6 +39,7 @@
 
     <link href="~/css/style.css" rel="stylesheet">
     <link href="~/css/search.css" rel="stylesheet">
+    @RenderSection("Styles", required: false)
 </head>
 <body>
     <!-- Spinner -->
