--- a/ITIResturant/ITIResturant/Views/Shared/Home/_Testimonial.cshtml
+++ b/ITIResturant/ITIResturant/Views/Shared/Home/_Testimonial.cshtml
@@ -2,7 +2,7 @@
 @model HomeIndexVm
 
 
-<<h2 class="mt-4 text-center">What Our Customers Say</h2>
+<h2 class="mt-4 text-center">What Our Customers Say</h2>
 
 @if (Model.Reviews.Any())
 {
