--- a/ITIResturant/ITIResturant/Views/Profile/Index.cshtml
+++ b/ITIResturant/ITIResturant/Views/Profile/Index.cshtml
@@ -107,6 +107,13 @@
     </div>
 </div>
 
+
+<div class="form-group form-check">
+    <input asp-for="SendEmailNotification" class="form-check-input" type="checkbox" />
+    <label class="form-check-label" asp-for="SendEmailNotification">
+        Receive Email Notifications
+    </label>
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
